push data to server

--- a/src/components/SchoolList/SchoolList.css
+++ b/src/components/SchoolList/SchoolList.css
@@ -1,3 +1,20 @@
 .card_pos {
   float: left;
 }
+.cardBody {
+  background-color: #668cff;
+  padding: 10%;
+  margin-bottom: 10%;
+}
+.fa-border-icon {
+  border-width: 2px;
+  border-style: solid;
+  border-color: black;
+  border-image: initial;
+  border-radius: 10% 10% 10% 10%;
+  padding: 2% 3% 2% 3%;
+  margin-left: 30%;
+}
+.CardHeader {
+  background-color: #3366ff;
+}
